Final Version Completed

--- a/Service2/.env
+++ b/Service2/.env
@@ -5,6 +5,11 @@ LIARA_SECRET_KEY=a902e02d-9324-4a1e-aef1-18cc0138dee7
 
 RABBITMQ_URL=amqps://smgwtkdg:Y8AXDjrQNmSewjQS_5ZFzqKral6c1UKd@hummingbird.rmq.cloudamqp.com/smgwtkdg
 
-TEXT_TO_IMAGE_API_URL=https://api-inference.huggingface.co/models/Salesforce/blip-image-captioning-large
-TEXT_TO_IMAGE_API_TOKEN=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
+IMAGE_TO_TEXT_API_URL=https://api-inference.huggingface.co/models/Salesforce/blip-image-captioning-large
+IMAGE_TO_TEXT_API_TOKEN=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
 
+DB_HOST=tai.liara.cloud
+DB_PORT=34424
+DB_USER=root
+DB_PASSWORD=r03LTfZ5eZ4bDhZuBaZY6xYv
+DB_NAME=condescending_aryabhata
