--- a/Service3/.env
+++ b/Service3/.env
@@ -10,3 +10,6 @@ DB_PORT=34424
 DB_USER=root
 DB_PASSWORD=r03LTfZ5eZ4bDhZuBaZY6xYv
 DB_NAME=condescending_aryabhata
+
+TEXT_TO_IMAGE_API_URL=https://api-inference.huggingface.co/models/kothariyashhh/GenAi-Texttoimage
+TEXT_TO_IMAGE_API_TOKEN=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
