Some changes due to clean code.

--- a/Service1/.env
+++ b/Service1/.env
@@ -7,3 +7,4 @@ MAILERSEND_API_KEY=mlsn.63cfe732d39a4efa0d3e2fdb02e08f1d10ab3e56373e65aa1ebd8379
 
 RABBITMQ_URL=amqps://smgwtkdg:Y8AXDjrQNmSewjQS_5ZFzqKral6c1UKd@hummingbird.rmq.cloudamqp.com/smgwtkdg
 
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:Goodvibes@localhost:3306/cloudcomputing
