--- a/Service2/.env
+++ b/Service2/.env
@@ -8,8 +8,8 @@ RABBITMQ_URL=amqps://smgwtkdg:Y8AXDjrQNmSewjQS_5ZFzqKral6c1UKd@hummingbird.rmq.c
 IMAGE_TO_TEXT_API_URL=https://api-inference.huggingface.co/models/Salesforce/blip-image-captioning-large
 IMAGE_TO_TEXT_API_TOKEN=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
 
-DB_HOST=tai.liara.cloud
-DB_PORT=34424
+DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=r03LTfZ5eZ4bDhZuBaZY6xYv
-DB_NAME=condescending_aryabhata
+DB_PASSWORD=Goodvibes
+DB_NAME=cloudcomputing
