--- a/Service2/requirements.txt
+++ b/Service2/requirements.txt
@@ -1,6 +1,6 @@
 boto3==1.35.33
 botocore==1.35.33
-mysql_connector_repackaged==0.3.1
+mysql_connector_python
 pika==1.3.2
 python-dotenv==1.0.1
 Requests==2.32.3
